# berkelium-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-workflow.yml
berkelium_cli/: extractor.py  mcp_server.py  retriever.py  run.py  store.py  styles.tcss  sync.py
src/: main.py
tests/: test_extractor.py  test_mcp_server.py  test_retriever.py  test_store.py  test_sync.py
