[project]
name = "berkelium-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["textual[syntax]>=8.2.0"]

[project.scripts]
berkelium-cli = "berkelium_cli.run:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
