[project]
name = "berkelium-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphqlite>=0.4.0",
    "textual[syntax]>=8.2.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=1.3.3",
]

[project.scripts]
berkelium-cli = "berkelium_cli.run:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "textual-dev>=1.8.0",
]
